--- a/_config.yml
+++ b/_config.yml
@@ -7,9 +7,10 @@ permalink:        pretty
 # relative_permalinks: true
 
 # Setup
-title:            Hyde
-tagline:          'A Jekyll theme'
-description:      'A brazen two-column <a href="http://jekyllrb.com" target="_blank">Jekyll</a> theme that pairs a prominent sidebar with uncomplicated content. Made by <a href="https://twitter.com/mdo" target="_blank">@mdo</a>.'
+title:            d1scr3te delibe rations 
+tagline:          A personal blog
+description:      non-trivial discretised reflections on a continuous universe. 
+description_line2: "&#x5Ba maths student's attempt at literacy&#x5D"
 url:              https://muzz-yasir.github.io
 baseurl:          ""
 future: true
@@ -33,4 +34,8 @@ paginate: 5
 version:          2.1.0
 
 github:
-  repo:           https://github.com/poole/hyde
+   repo:           https://github.com/muzz-yasir/
+
+social:
+    linkedin: https://www.linkedin.com/in/mustafa-yasir/
+    email: mailto:mustafa.y36@gmail.com
