--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ markdown:         kramdown
 highlighter:      pygments
 
 # Permalinks
-permalink:        pretty
+#permalink:        pretty
 # relative_permalinks: true
 
 # Setup
@@ -30,6 +30,7 @@ author:
 plugins: [jekyll-paginate]
 
 paginate: 5
+paginate_path: "/posts/page:num/"
 
 # Custom vars
 version:          2.1.0
