first post and updates

--- a/_config.yml
+++ b/_config.yml
@@ -40,4 +40,4 @@ github:
 
 social:
     linkedin: https://www.linkedin.com/in/mustafa-yasir/
-    email: mailto:mustafa.y36@gmail.com
+    mail: mailto:mustafa.y36@gmail.com
