scholar to sidebar

--- a/_config.yml
+++ b/_config.yml
@@ -41,3 +41,4 @@ github:
 social:
     linkedin: https://www.linkedin.com/in/mustafa-yasir/
     mail: mailto:mustafa.y36@gmail.com
+    scholar: https://scholar.google.com/citations?user=mObz9eIAAAAJ&hl=en&oi=ao
